06 canary/k8s/ingress-nginx/ingress-canary-header.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: versioned-echo-ing
  annotations:
    nginx.ingress.kubernetes.io/canary: "true"
    nginx.ingress.kubernetes.io/canary-by-header: "X-Canary"
    nginx.ingress.kubernetes.io/canary-by-header-value: "v2"
spec:
  rules:
  - http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: versioned-echo
            port:
              number: 80
